--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <!-- <app-custom-two-app></app-custom-two-app> -->
 <!-- <app-custom-three></app-custom-three> -->
-<app-customer-registration-form></app-customer-registration-form>
+<!-- <div>
+    <input type="text" />
+</div> -->
+<app-customer-registration-form>
+<input type="text">
+</app-customer-registration-form>
