--- a/src/app/customer-registration-form/customer-registration-form.component.html
+++ b/src/app/customer-registration-form/customer-registration-form.component.html
@@ -74,7 +74,7 @@
 <!-- () -->
 <!-- $event which represents the feedbackInformation -->
 
-<app-customer-details
+<app-customer-details *ngIf="isSubmitted"
   [test]="'SampleTestData'"
   [registrionFormData]="CustomerForm"
   (evtFeedbackInformation)="receivedFeedbackData($event)"
